--- a/index.html
+++ b/index.html
@@ -4,14 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Assignment-01</title>
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Merriweather:wght@400;900&display=swap');
+      </style>
     <link rel="stylesheet" href="Styles/Portfolio.css">
 </head>
 <body>
     <header>
-        <nav>
-            <h3>Happy New Year</h3>
-            <h1>New Year Party Celebration</h1>
-        </nav>
+        <div class="banner">
+            <div>
+                <h4 class="banner-greeting">Happy New Year</h4>
+                <h1 class="banner-title">New Year Party <br> Celebration</h1>
+            </div>
+        
+        </div>
 
     </header>
     <main>
