--- a/index.html
+++ b/index.html
@@ -1,14 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Assignment-01</title>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Merriweather:wght@400;900&display=swap');
-      </style>
+
+        @import url('https://fonts.googleapis.com/css2?family=Inter:wght@700;800;900&family=Merriweather:wght@400;900&display=swap');
+    </style>
     <link rel="stylesheet" href="Styles/Portfolio.css">
 </head>
+
 <body>
     <header>
         <div class="banner">
@@ -16,16 +20,67 @@
                 <h4 class="banner-greeting">Happy New Year</h4>
                 <h1 class="banner-title">New Year Party <br> Celebration</h1>
             </div>
-        
+
         </div>
 
     </header>
     <main>
+        <div>
+            <h3 class="OFF">65% OFF</h3>
+            <h4 class="holyday-deals">OUR HOLIDAY DEALS ARE BETTER</h4>
+            <h3 class="all-categories">ALL CATEGORIES</h3>
+            <img class="happy-new-year" src="resources/New Year Photo.png" alt="">
+        </div>
+        <div class="banner-middle">
+            <div>
+                <h2 class="banner-welcome">Welcome to <br>midnight party</h2>
+
+                <h4 class="welcome-dis">Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada. <br> Ipsum sed sodales risus ut pellentesque vel euismod.</h4>
+
+                <h4 class="join-now">JOIN NOW</h4>
+
+                <img class="banner-middle-2024" src="resources/Group 70.png" alt="">
+            </div>
+
+        </div>
+        <section class="schedule">
+
+            <h4 class="schedule-title">Place: <span class="schedule-title-color">New Park Hotel</span> <br>
+                Date: <span class="schedule-title-color">31 December Night 2023</span>
+                <br>Time: <span class="schedule-title-color">Evening 7.30 pm to 12.30 am</span> 
+            </h4>
+            <button class="schedule-button">JOIN NOW</button>
+
+        </section>
+
+        <section class="offer">
+            <h4 class="best-offer">NEW BEST OFFER</h4>
+            <h2 class="comming-soon">Coming Soon</h2>
+            <p>Dolor sit amet consectetur. Consequat eget consectetur maecenas<br> sed molestie <malesuada class="br"></malesuada> Ipsum sed sodales risus ut pellentesque vel euismod. </p>
+        </section>
+
+        <img class="circle-image" src="resources/Ellipse 1.png" alt="">
+
+        <section new-year>
+            <h1 new-year-date>2024</h1>
+
+        </section>
+
+        <div>
+            <img src="resources/Rectangle 3.png" alt="">
+            <img src="resources/Rectangle 4.png" alt="">
+            <img src="resources/Rectangle 5.png" alt="">
+            <img src="resources/Rectangle 6.png" alt="">
+            <img src="resources/Rectangle 7.png" alt="">
+            <img src="resources/Rectangle 8.png" alt="">
+        </div>
+
 
     </main>
     <footer>
 
     </footer>
-    
+
 </body>
+
 </html>
